--- a/ivy.xml
+++ b/ivy.xml
@@ -14,6 +14,7 @@
   <dependencies>
 	
 	<dependency org="com.xpandit" name="project.structure" rev="0.1"/>
+	<dependency org="com.xpandit" name="database.structure" rev="0.1"/>
 	
   </dependencies>
 </ivy-module>
